--- a/index.html
+++ b/index.html
@@ -68,51 +68,49 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
+            <input type="text" id="search-bar" placeholder="Buscar produtos...">
+            
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">
-                        <i class="fa-solid fa-play"></i> Início
-                    </a></li>
-                    <li class="nav-item"><a class="nav-link" href="salgados.html">
-                        <i class="fa-solid fa-burger"></i> Salgados
-                    </a></li>
-                    <li class="nav-item"><a class="nav-link" href="doces.html">
-                        <i class="fa-solid fa-cookie-bite"></i> Doces
-                    </a></li>
-                    <li class="nav-item"><a class="nav-link" href="lanches.html">
-                        <i class="fa-solid fa-utensils"></i> Lanches
-                    </a></li>
-                    <li class="nav-item"><a class="nav-link" href="vegetarianos.html">
-                        <i class="fa-solid fa-seedling"></i> Vegetarianos
-                    </a></li>
-                    <li class="nav-item"><a class="nav-link" href="contato.html">
-                        <i class="fa-solid fa-address-book"></i> Contato
-                    </a></li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pedidos.html">
-                            <i class="fa-solid fa-cart-plus"></i> Pedidos
-                        </a>
-                    </li>
-
+                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa-solid fa-play"></i> Início</a></li>
+                    <li class="nav-item"><a class="nav-link" href="salgados.html"><i class="fa-solid fa-burger"></i> Salgados</a></li>
+                    <li class="nav-item"><a class="nav-link" href="doces.html"><i class="fa-solid fa-cookie-bite"></i> Doces</a></li>
+                    <li class="nav-item"><a class="nav-link" href="lanches.html"><i class="fa-solid fa-utensils"></i> Lanches</a></li>
+                    <li class="nav-item"><a class="nav-link" href="vegetarianos.html"><i class="fa-solid fa-seedling"></i> Vegetarianos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contato.html"><i class="fa-solid fa-address-book"></i> Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pedidos.html"><i class="fa-solid fa-cart-plus"></i> Pedidos</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
 
-<div class="w3-content w3-display-container">
-    <img class="mySlides" src="img/foto1.jpg" style="width:100%">
-    <img class="mySlides" src="img/foto2.jpg" style="width:100%">
-    <img class="mySlides" src="img/foto3.jpg" style="width:100%">
-    <img class="mySlides" src="img/foto4.jpg" style="width:100%">
-    <img class="mySlides" src="img/foto5.jpg" style="width:100%">
-    <img class="mySlides" src="img/foto6.jpg" style="width:100%">
-    <img class="mySlides" src="img/foto7.jpg" style="width:100%">
-    <img class="mySlides" src="img/foto8.jpg" style="width:100%">
+<body>
 
-    <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-    <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-</div>
+
+    <div class="w3-content w3-display-container">
+        <img class="mySlides" src="img/foto1.jpg" style="width:100%">
+        <img class="mySlides" src="img/foto2.jpg" style="width:100%">
+        <img class="mySlides" src="img/foto3.jpg" style="width:100%">
+        <img class="mySlides" src="img/foto4.jpg" style="width:100%">
+        <img class="mySlides" src="img/foto5.jpg" style="width:100%">
+        <img class="mySlides" src="img/foto6.jpg" style="width:100%">
+        <img class="mySlides" src="img/foto7.jpg" style="width:100%">
+        <img class="mySlides" src="img/foto8.jpg" style="width:100%">
+
+        <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+        <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+
+    </div>
+
+    <br><br>
+
+    <div id="product-container"></div>
+
+    
+    <script src="script.js"></script>
+
 
 <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
     <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center"
@@ -193,7 +191,8 @@
 <footer class="text-center mt-4">
     <p>&copy; Sabor & Arte, 2025</p>
 </footer>
-
+<br><br>
+<br>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
