--- a/index.html
+++ b/index.html
@@ -63,13 +63,20 @@
 </svg>
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: #000000">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="color: #000000">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <input type="text" id="search-bar" placeholder="Buscar produtos...">
+            <div class="search-container">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input
+                        type="text"
+                        id="search-bar"
+                        placeholder="Buscar produtos..."
+                        aria-label="Buscar produtos">
+            </div>
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
