--- a/lanches.html
+++ b/lanches.html
@@ -99,37 +99,53 @@
 <h1>Lanches</h1>
 
 <div class="product">
-    <img src="img/salgado-4.jpg" alt="Nuggets">
+    <img src="img/salgado-4.jpg"
+    alt="nuggets"
+         class="product-image"
+         data-product-id="nuggets">
     <h2>Nuggets</h2>
     <p>Deliciosos nuggets de frango, empanados na medida certa. Acompanha batatas fritas sequinhas.
         <br>Acompanha molho de pimenta irresistível.</p>
     <p class="price">🔥 Tudo isso por apenas R$ 17,00! Peça agora e aproveite!</p>
-</div>
+    </div>
 
 <div class="product">
-    <img src="img/lanches-1.jpg" style="width: 276px; height: 343px" alt="Hamburger">
+    <img src="img/lanches-1.jpg" style="width: 276px; height: 343px" 
+    alt="hamburger"
+         class="product-image"
+         data-product-id="hamburger">
     <h2>Hamburger</h2>
     <p>Um suculento hambúrguer artesanal, preparado com carne de qualidade e temperos especiais.
         <br>Acompanha molho especial e batatas crocantes.</p>
     <p class="price">🔥 Tudo isso por apenas R$ 22,00! <br>Peça agora e aproveite!</p>
+   
 </div>
 
 <div class="product">
-    <img src="img/lanches-2.jpg" style="width: 276px; height: 343px" alt="Shawarma">
+    <img src="img/lanches-2.jpg" style="width: 276px; height: 343px"
+    alt="shawarma"
+         class="product-image"
+         data-product-id="shawarma">
     <h2>Shawarma</h2>
     <p>Uma explosão de sabores do Oriente Médio! Carne suculenta grelhada lentamente, servida com legumes frescos e molho de alho envolto em um pão sírio macio.</p>
     <p class="price">🔥 Tudo isso por apenas R$ 25,00! Peça agora e aproveite!</p>
-</div>
+    </div>
 
 <div class="product">
-    <img src="img/lanches-3.jpg" style="width: 276px; height: 343px" alt="Empadão">
+    <img src="img/lanches-3.jpg" style="width: 276px; height: 343px" 
+    alt="empadao"
+         class="product-image"
+         data-product-id="empadao">
     <h2>Empadão</h2>
     <p>Uma empada grande e recheada com frango cremoso e temperado, envolto por uma massa amanteigada e crocante. Uma verdadeira delícia caseira!</p>
     <p class="price">🔥 Tudo isso por apenas R$ 18,00! Peça agora e aproveite!</p>
 </div>
 
 <div class="product">
-    <img src="img/lanches-4.jpg" style="width: 276px; height: 343px" alt="Misto">
+    <img src="img/lanches-4.jpg" style="width: 276px; height: 343px" 
+    alt="misto"
+         class="product-image"
+         data-product-id="misto">
     <h2>Misto Quente</h2>
     <p>O clássico misto quente! <br>
         <br>
@@ -188,6 +204,18 @@
         </li>
     </ul>
 </div>
+<!-- Modal -->
+<div id="product-modal" class="modal">
+    <div class="modal-content">
+      <span class="close-button">&times;</span>
+      <h2 id="modal-title"></h2>
+      <ul id="modal-ingredients"></ul>
+      <p id="modal-lactose"></p>
+    </div>
+  </div>
+  
+  <!-- No final do body -->
+  <script src="script.js"></script>
 
 
 </body>
