--- a/doces.html
+++ b/doces.html
@@ -158,6 +158,7 @@
     <p>Nada como um bolo fofinho e delicioso para tornar seu dia mais especial!
 
     <p class="price">🔥 Bolos inteiros a partir de R$ 69,99 <br> 🔥 Fatias individuais por R$ 10,99</p>
+</div>
 
 <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
     <button class="btn btn-bd-primary py-0 dropdown-toggle d-flex align-items-center"
