--- a/doces.html
+++ b/doces.html
@@ -135,7 +135,7 @@
     </p>
 </div>
 
-<div class="product">
+<!-- <div class="product">
     <img src="img/doce-3.jpg" style="width: 276px; height: 343px"
          alt="tortasabores"
          class="product-image"
@@ -147,7 +147,7 @@
     <p class="price">🔥 Tortas inteiras a partir de R$ 59,99 <br>
         🔥 Fatias individuais por R$ 10,99</p>
     
-</div>
+</div> -->
 
 <div class="product">
     <img src="img/doce-4.jpg" style="width: 276px; height: 343px"
