--- a/doces.html
+++ b/doces.html
@@ -156,6 +156,7 @@
          data-product-id="bolosabores">
     <h2>Bolo Sabores</h2>
     <p>Nada como um bolo fofinho e delicioso para tornar seu dia mais especial!
+        Para começar bem ou terminar bem o seu dia...
 
     <p class="price">🔥 Bolos inteiros a partir de R$ 69,99 <br> 🔥 Fatias individuais por R$ 10,99</p>
 </div>
